# talos-pilot

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  flake.nix
.github/workflows/: ci.yml  release.yml
crates/talos-pilot-core/: Cargo.toml
crates/talos-pilot-core/src/: async_state.rs  errors.rs  indicators.rs  lib.rs  network.rs  types.rs
crates/talos-pilot-tui/: Cargo.toml
crates/talos-pilot-tui/src/: action.rs  app.rs  clipboard.rs  lib.rs  tui.rs  ui_ext.rs
crates/talos-pilot-tui/src/components/: cluster.rs  diagnostics.rs  etcd.rs  home.rs  insecure.rs  lifecycle.rs  logs.rs  mod.rs  multi_logs.rs  network.rs  node_operations.rs  processes.rs  rolling_operations.rs  security.rs  storage.rs  wizard.rs  workloads.rs
crates/talos-pilot-tui/src/components/diagnostics/: core.rs  k8s.rs  mod.rs  types.rs
crates/talos-pilot-tui/src/components/diagnostics/addons/: cert_manager.rs  mod.rs
crates/talos-pilot-tui/src/components/diagnostics/cni/: flannel.rs  mod.rs
crates/talos-rs/: Cargo.toml  build.rs
crates/talos-rs/examples/: version.rs
crates/talos-rs/proto/: LICENSE
crates/talos-rs/src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  talosctl.rs
scripts/: fetch-protos.sh
src/: main.rs
test-clusters/scripts/: cluster.sh  test-cluster-qemu.sh
