[package]
name = "talos-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust SDK for Talos Linux API"

[dependencies]
# gRPC
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# Async
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true

# TLS
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true

# Serialization
serde.workspace = true
serde_yaml.workspace = true
base64.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
dirs-next.workspace = true

# Logging
tracing.workspace = true

[build-dependencies]
tonic-build = "0.12"
